fixed align issue in the dashboard

--- a/css/sass/base/_default.scss
+++ b/css/sass/base/_default.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  font-size: 0.8rem;
+  // font-size: 0.8rem;
 }
 
 button,
