--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -20,7 +20,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  font-size: 0.8rem;
 }
 
 button,
@@ -1259,8 +1258,8 @@ hr {
 }
 
 .dot {
-  height: 0.8em;
-  width: 0.8em;
+  height: 0.6em;
+  width: 0.6em;
   border-radius: 50%;
   display: inline-block;
   margin-right: 0.5em;
