--- a/css/sass/utilities/_other.scss
+++ b/css/sass/utilities/_other.scss
@@ -31,8 +31,8 @@
 }
 
 .dot {
-  height: 0.8em;
-  width: 0.8em;
+  height: 0.6em;
+  width: 0.6em;
   border-radius: 50%;
   display: inline-block;
   margin-right: 0.5em;
